Add first SIYI packet sender iteration
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/camera-manager/CMakeLists.txt
+++ b/camera-manager/CMakeLists.txt
@@ -5,6 +5,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project(camera-manager)
 
+add_library(siyi
+    siyi.cpp
+    siyi_crc.cpp
+)
+
+
 add_executable(camera_manager
     camera_manager.cpp
 )
@@ -13,6 +19,23 @@ find_package(MAVSDK REQUIRED)
 
 target_link_libraries(camera_manager
     MAVSDK::mavsdk
+    siyi
 )
 
-add_compile_options(camera_server PRIVATE -Wall -Wextra)
+target_compile_options(camera_manager PRIVATE -Wall -Wextra)
+
+include(CTest)
+
+add_executable(siyi_test
+    siyi_test.cpp
+)
+
+target_link_libraries(siyi_test
+    siyi
+)
+
+target_compile_options(siyi_test PRIVATE -Wall -Wextra)
+
+add_test(NAME siyi_test COMMAND siyi_test)
+
+enable_testing()
