--- a/.github/workflows/rpi-build.yml
+++ b/.github/workflows/rpi-build.yml
@@ -11,8 +11,8 @@ on:
     - '*'
 
 jobs:
-  build:
-    name: Build executables
+  create-deb-package:
+    name: Create .deb package
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -26,8 +26,24 @@ jobs:
           distro: bullseye
           githubToken: ${{ github.token }}
           run: |
-            apt-get update && apt-get install -y libgstreamer1.0-dev libgstrtspserver-1.0-dev build-essential cmake git wget
+            apt-get update
+            apt-get install -y libgstreamer1.0-dev libgstrtspserver-1.0-dev build-essential cmake git wget rubygems
+            gem install fpm
             wget https://github.com/mavlink/MAVSDK/releases/download/v2.2.0/libmavsdk-dev_2.2.0_debian11_arm64.deb
             dpkg -i libmavsdk-dev_2.2.0_debian11_arm64.deb
-            cmake -Bbuild -S.
-            cmake --build build -j$(nproc)
+            rm libmavsdk-dev_2.2.0_debian11_arm64.deb
+            cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=install -Bbuild -S.
+            cmake --build build -j$(nproc) --target install
+            ./create_packages.sh ./install . arm64 siyi-a8-mini-camera-manager
+      - name: Upload package
+        uses: actions/upload-artifact@v3
+        with:
+          name: deb-package
+          path: |
+            *.deb
+      - name: Upload to release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            *.deb
