CI: add required permissions
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/.github/workflows/rpi-build.yml
+++ b/.github/workflows/rpi-build.yml
@@ -14,6 +14,9 @@ jobs:
   create-deb-package:
     name: Create .deb package
     runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
         with:
