--- a/.github/workflows/rpi-build.yml
+++ b/.github/workflows/rpi-build.yml
@@ -35,6 +35,7 @@ jobs:
             wget https://github.com/mavlink/MAVSDK/releases/download/v2.2.0/libmavsdk-dev_2.2.0_debian11_arm64.deb
             dpkg -i libmavsdk-dev_2.2.0_debian11_arm64.deb
             rm libmavsdk-dev_2.2.0_debian11_arm64.deb
+            git config --global --add safe.directory "$GITHUB_WORKSPACE"
             cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=install -Bbuild -S.
             cmake --build build -j$(nproc) --target install
             ./create_packages.sh ./install . arm64 siyi-a8-mini-camera-manager
