CI: add permission to upload release artifacts
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/.github/workflows/rpi-build.yml
+++ b/.github/workflows/rpi-build.yml
@@ -15,7 +15,7 @@ jobs:
     name: Create .deb package
     runs-on: ubuntu-22.04
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - uses: actions/checkout@v4
