Add class to read camera data
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/camera-manager/CMakeLists.txt
+++ b/camera-manager/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 project(camera-manager)
 
 add_library(siyi
-    siyi.cpp
+    siyi_protocol.cpp
     siyi_crc.cpp
 )
 
