camera-manager: Install xml file
And make sure we use it from /usr/share.
And if we're running locally after building, use the local one.

Signed-off-by: Julian Oes <julian@oes.ch>

--- a/camera-manager/CMakeLists.txt
+++ b/camera-manager/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable(camera_manager
 )
 
 install(TARGETS camera_manager)
+install(FILES mavlink_ftp_root/siyi_a8_mini.xml DESTINATION share/mavlink_ftp_root)
 
 find_package(MAVSDK REQUIRED)
 
