CI: build for Debian bookworm instead
Signed-off-by: Julian Oes <julian@oes.ch>

--- a/.github/workflows/rpi-build.yml
+++ b/.github/workflows/rpi-build.yml
@@ -25,8 +25,9 @@ jobs:
         name: Run commands
         id: runcmd
         with:
-          arch: aarch64
-          distro: bullseye
+          arch: none
+          distro: none
+          base_image: arm64v8/debian:bookworm
           githubToken: ${{ github.token }}
           run: |
             apt-get update
